<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.enedilim.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_taskFragment"
            app:destination="@id/task_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/task_fragment"
        android:name="com.example.enedilim.ui.home.TaskFragment"
        android:label="@string/Task"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="newTask"
            app:argType="com.example.enedilim.database.Letter" />
        <action
            android:id="@+id/action_taskFragment_to_homeFragment"
            app:destination="@id/home_fragment"
            app:launchSingleTop="false"
            app:popUpTo="@+id/home_fragment"
            app:popUpToInclusive="true" />
    </fragment>
<!--///////////////////////////////-->

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.enedilim.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.enedilim.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
